# text-to-speech-pipeline

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  streamlit_app.py  voice_presets.json
docs/plans/: 2026-02-26-chatterbox-migration-design.md  2026-02-26-chatterbox-migration.md
docs/superpowers/plans/: 2026-03-10-ui-improvements.md
docs/superpowers/specs/: 2026-03-16-streaming-and-tokens-design.md
tests/: conftest.py  test_app.py
