[project]
name = "text-to-speech-pipeline"
version = "0.2.0"
description = "Streamlit web app for multilingual text-to-speech using Chatterbox"
requires-python = ">=3.12"
dependencies = [
    "chatterbox-tts",
    "numpy>=1.26.0",
    "streamlit",
    "scipy",
    "setuptools<71",
    "torch",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "ty",
]

[tool.uv]
constraint-dependencies = [
    "ml-dtypes>=0.4.0",
    "pandas>=2.2.0",
]

[tool.uv.extra-build-dependencies]
pkuseg = ["numpy"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ty.environment]
python-version = "3.12"
